[package]
name = "unreal-keygen-web"
version = "0.1.0"
edition = "2024"
description = "WebAssembly interface for Unreal Tournament 3 CD key generator"
authors = ["siohaza <siohaza@proton.me>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
unreal-keygen-core = { path = "../unreal-keygen-core" }
wasm-bindgen = "0.2.100"
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
